--- a/index.html
+++ b/index.html
@@ -84,18 +84,15 @@ body,td,th {
       <p><img src="diuk.jpg" width="165" align="left"></p>
     </div></td>
     <td width="*" align="left"><p><span class="name_header">Carlos Diuk-Wasser, Ph.D.</span></p>
-      <p>Post-Doctoral Research Fellow<br>
-        Department of Psychology and Princeton Neuroscience Institute<br>
-        Princeton University<br>
+      <p>Data Scientist<br>
+        <a href="http://facebook.com/data" target="_blank">Core Data Science team</a><br>
+        Facebook, Inc.<br>
         <br>
-        <span class="email_style"><em>cdiuk@princeton.edu</em></span></p></td>
+        <span class="email_style"><em>carlosdiuk gmail com</em></span></p></td>
   </tr>
   <tr><td colspan="2"><hr align="left" color="#333"></td></tr>
     <tr><td colspan="2" align="center"><a href="#About">ABOUT ME</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Education">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Pubs">PUBLICATIONS</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Teaching">TEACHING</a></td></tr>
   <tr><td colspan="2"><hr align="left" color="#333"></td></tr>
-  <tr><td colspan="2" align="center">
-    I moved! I am currently a <a href="http://www.facebook.com/carlos.diuk">Data Scientist</a> at Facebook
-  </td></tr>
   <tr>
   	<td colspan="2">
 		<span class="title"><a name="About">ABOUT ME</a><span>
@@ -103,22 +100,20 @@ body,td,th {
   </tr>
   <tr>
   	<td colspan="2">
-		I study the neural bases of hierarchical behavior. I am interested in how humans learn and plan action sequences in unknown, complex environments. I conduct behavioral and fMRI experiments and build computational models using the theoretical framework of reinforcement learning.<br><br>
-		
-		I am currently a Postdoctoral Research Fellow in the <a href="http://www.princeton.edu/~nivlab/">Niv</a> and <a href="http://www.princeton.edu/~matthewb/">Botvinick</a> labs.<br><br>
-		
+		I work in the Core Data Science team at Facebook, doing quantitative research to understand people's online behavior in the context of a large-scale social network. <br>
+        <br> 
 		Download my full <a href="CV_CarlosDiuk.pdf">CV</a>.<br><br>
 	</td>
   </tr>
   <tr>
   	<td colspan="2">
-		<span class="title"><a name="Education">EDUCATION</a><span>
+		<span class="title"><a name="Education">EDUCATION AND PRIOR RESEARCH</a><span>
 	</td>
   </tr>
   <tr>
-  	<td colspan="2">
-		Postdoctoral Research Fellow, Princeton University (2009-present) Advisors: <a href="http://www.princeton.edu/~yael/">Yael Niv</a>, <a href="http://www.princeton.edu/~matthewb/">Matt Botvinick</a><br>
-		Ph.D. in Computer Science, Rutgers University (2009). Advisor: <a href="http://www.cs.rutgers.edu/~mlittman/">Michael Littman</a><br>
+  	<td colspan="2">       
+		Postdoctoral Research Fellow, Princeton University (2009-2013) Labs: <a href="http://www.princeton.edu/~yael/">Yael Niv</a>, <a href="http://www.princeton.edu/~matthewb/">Matt Botvinick</a>.<br>Studied the neural bases of hierarchical behavior in humans.<br><br>
+		Ph.D. in Computer Science, Rutgers University (2009). Advisor: <a href="http://www.cs.brown.edu/~mlittman/">Michael Littman</a>.<br>Thesis: &quot;An object-oriented representation for efficient reinforcement learning&quot;. <a href="papers/Thesis.pdf">pdf</a><br><br>
 		Licenciatura in Computer Science, University of Buenos Aires (2003).<br><br>
 	</td>
   </tr>
@@ -130,26 +125,24 @@ body,td,th {
   <tr>
   <td colspan="2">
 <p>Also check my <a href="http://scholar.google.com/citations?user=l0Txg3UAAAAJ" target="_blank">Google Scholar profile</a>.</p>
-<H4>Pre-prints submitted or under review:</H4>
-<p>2012. &ldquo;Discovering hierarchical task structure&rdquo;, Carlos Diuk, Natalia C&oacute;rdova, Yael Niv and Matthew M. Botvinick. Draft available.</p>
 <H4>Peer-reviewed Publications:</H4>
-<p><em>In press.</em> &ldquo;Divide and conquer: hierarchical reinforcement learning and task decomposition in humans.&rdquo;, Carlos Diuk, Anna Schapiro, Natalia C&oacute;rdova, Jose Ribas-Fernandes, Yael Niv and Matthew M. Botvinick. In <em>Computational and Robotic Models of the Hierarchical Organization of Behavior</em>. Edited by Baldassare G and Mirolli M. Springer Verlag.</p>
-<p>2014. &ldquo;Parsing heuristic and forward search in first-graders game-play behavior&rdquo;, Luciano Paz, Andrea Goldin, Carlos Diuk and Mariano Sigman. <i>Cognitive Science</i>. <a href="http://neuro.org.ar/sites/neuro.org.ar/files/Paz%202014%20Cogn%20Sci.pdf" target="_blank">link</a></p>
+<p><em>In press.</em> &ldquo;Divide and conquer: hierarchical reinforcement learning and task decomposition in humans.&rdquo;, Carlos Diuk, Anna Schapiro, Natalia C&oacute;rdova, Jos&eacute; Ribas-Fernandes, Yael Niv and Matthew M. Botvinick. In <em>Computational and Robotic Models of the Hierarchical Organization of Behavior</em>. Edited by Baldassare G and Mirolli M. Springer Verlag.</p>
+<p>2014. &ldquo;Parsing heuristic and forward search in first-graders game-play behavior&rdquo;, Luciano Paz, Andrea Goldin, Carlos Diuk and Mariano Sigman. <i>Cognitive Science</i>. <a href="papers/Paz2014CognSci.pdf" target="_blank">link</a></p>
 <p>2013. &ldquo;Hierarchical Learning Induces Two Simultaneous, But Separable, Prediction Errors in Human Basal Ganglia&rdquo;, Carlos Diuk, Karin Tsai, Jonathan Wallis, Matthew M. Botvinick and Yael Niv. <i>The Journal of Neuroscience</i>. <a href="http://www.jneurosci.org/content/33/13/5797.abstract" target="_blank">link</a></p>
 <p>2012. &ldquo;A quantitative philology of introspection&rdquo;, Carlos Diuk, Diego F. Slezak, Iv&aacute;n Raskovsky, Mariano Sigman and Guillermo Cecchi. <em>Frontiers in Integrative Neuroscience</em>. <a href="http://www.frontiersin.org/integrative_neuroscience/10.3389/fnint.2012.00080/abstract" target="_blank">link</a> </p>
-<p>2011. &ldquo;A Neural Signature of Hierarchical Reinforcement Learning&rdquo;, José J.F. Ribas-Fernandes, Alec Solway, Carlos Diuk, Joseph T. McGuire, Andrew G. Barto, Yael Niv and Matthew M. Botvinick. <em>Neuron</em>, Volume 71, Issue 2, 370-379.<a href=http://www.cell.com/neuron/abstract/S0896-6273(11)00499-5 target="_blank"> abstract </a></p>
-<p>2010. &ldquo;Generalizing Apprenticeship Learning across Hypothesis Classes&rdquo;, Thomas J. Walsh, Kaushik Subramanian,  Michael L. Littman and Carlos Diuk. ICML 2010.<a href=http://www.princeton.edu/~cdiuk/papers/icml10Traces.pdf> pdf</a></p>
-<p>2009. &ldquo;The Adaptive k-Meteorologists Problem and Its Application to Structure Learning and Feature Selection in Reinforcement Learning&rdquo;, Carlos Diuk, Lihong Li and Bethany Leffler. ICML 2009. <a href=http://www.princeton.edu/~cdiuk/papers/meteorologist.pdf>pdf</a> / <a href="http://videolectures.net/icml09_diuk_akmp/">videolecture</a></p>
-<p>2009. &ldquo;Exploring Compact Reinforcement-Learning Representations with Linear Regression&rdquo;, Thomas J. Walsh, István Szita, Carlos Diuk, and Michael L. Littman. UAI 2009.<a href=http://www.princeton.edu/~cdiuk/papers/uai09Linear.pdf> pdf</a></p>
-<p>2008. &ldquo;An Object-Oriented Representation for Efficient Reinforcement Learning&rdquo;, Carlos Diuk, Andre Cohen and Michael L. Littman. ICML 2008. <a href=http://www.princeton.edu/~cdiuk/papers/OORL.pdf>pdf</a> / <a href="http://videolectures.net/icml08_diuk_oor/">videolecture</a></p>
+<p>2011. &ldquo;A Neural Signature of Hierarchical Reinforcement Learning&rdquo;, Jos&eacute; J.F. Ribas-Fernandes, Alec Solway, Carlos Diuk, Joseph T. McGuire, Andrew G. Barto, Yael Niv and Matthew M. Botvinick. <em>Neuron</em>, Volume 71, Issue 2, 370-379.<a href=http://www.cell.com/neuron/abstract/S0896-6273(11)00499-5 target="_blank"> abstract </a></p>
+<p>2010. <strong>PhD Thesis</strong>: &quot;An object-oriented representation for efficient reinforcement learning&quot;. <a href="papers/Thesis.pdf">pdf</a></p>
+<p>2010. &ldquo;Generalizing Apprenticeship Learning across Hypothesis Classes&rdquo;, Thomas J. Walsh, Kaushik Subramanian,  Michael L. Littman and Carlos Diuk. ICML 2010.<a href="papers/icml10Traces.pdf"> pdf</a></p>
+<p>2009. &ldquo;The Adaptive k-Meteorologists Problem and Its Application to Structure Learning and Feature Selection in Reinforcement Learning&rdquo;, Carlos Diuk, Lihong Li and Bethany Leffler. ICML 2009. <a href="papers/meteorologist.pdf">pdf</a> / <a href="http://videolectures.net/icml09_diuk_akmp/">videolecture</a></p>
+<p>2009. &ldquo;Exploring Compact Reinforcement-Learning Representations with Linear Regression&rdquo;, Thomas J. Walsh, Istv&aacute;n Szita, Carlos Diuk, and Michael L. Littman. UAI 2009.<a href="papers/uai09Linear.pdf"> pdf</a></p>
+<p>2008. &ldquo;An Object-Oriented Representation for Efficient Reinforcement Learning&rdquo;, Carlos Diuk, Andre Cohen and Michael L. Littman. ICML 2008. <a href="papers/OORL.pdf">pdf</a> / <a href="http://videolectures.net/icml08_diuk_oor/">videolecture</a></p>
 <p>2008. &ldquo;Hierarchical Reinforcement Learning&rdquo;, Carlos Diuk and Michael Littman. <a href="http://www.igi-global.com/reference/details.asp?id=7733" target="_blank">Encyclopedia of Artificial Intelligence</a>, IGI Global, July 2008. </p>
 <p>2007. &ldquo;Efficient Structure Learning in Factored-state MDPs&rdquo;, Alexander L. Strehl, Carlos Diuk and Michael L. Littman. AAAI 2007.<a href="papers/StructLearnAAAI07.pdf">pdf</a></p>
 <p>2007. &ldquo;An adaptive anomaly detector for worm detection &rdquo;, John Mark Agosta, Carlos Diuk, Jaideep Chandrashekar and Carl Livadas. Second Workshop on Tackling Computer Systems Problems with Machine Learning Techniques (sysML-07). <a href="papers/sysml07.pdf">pdf</a></p>
 <p>2006. &ldquo;A Hierarchical Approach to Efficient Reinforcement Learning in Deterministic Domains&rdquo;, Carlos Diuk, Alexander L. Strehl and Michael L. Littman. AAMAS&rsquo;06. <a href="papers/HRL_AAMAS.pdf">pdf</a>
 </p>
-<p>2003. &ldquo;Una herramienta computacional para la reconstrucción de genealogías históricas.&rdquo;, Carlos Diuk. Licenciatura Dissertation. Dept. of Computer Science, Universidad de Buenos Aires.<a href="papers/TesisLic.pdf"> pdf</a></p>
+<p>2003. &ldquo;Una herramienta computacional para la reconstrucci&oacute;n de genealog&iacute;as hist&oacute;ricas.&rdquo;, Carlos Diuk. Licenciatura Dissertation. Dept. of Computer Science, Universidad de Buenos Aires.<a href="papers/TesisLic.pdf"> pdf</a></p>
 <p>2002. &ldquo;Computer tools for reconstructing a genealogy&rdquo;, Carlos Diuk and Enrique T&aacute;ndeter. <em>International Journal of History and Computing</em>. Edinburgh University Press. <a href="papers/ComputerTools.pdf"> pdf</a></p>
-<p><strong>PhD Thesis</strong>: &quot;An object-oriented representation for efficient reinforcement learning&quot;. <a href="papers/Thesis.pdf">pdf</a></p>
 <H4>Other publications and talks: </H4>
 
 <p>2013. &ldquo;Compositional policy priors&rdquo;, Wingate, David; Diuk, Carlos; O'Donnell, Timothy; Tenenbaum, Joshua; Gershman, Samuel. Technical Report 2013-007. MIT CSAIL. <a href=http://hdl.handle.net/1721.1/78573 target="_blank">link</a></p>
