Updated CV and TEDx link

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ body,td,th {
     </ul>
   <p>Other:</p>
     <ul>
+    <li><p><a href="https://www.youtube.com/watch?v=mDoQxXiHup4" target="_blank">TEDxRioDeLaPlata</a> talk (with English subtitles).</i></p>
     <li><p><a href="https://www.youtube.com/watch?v=-cYzjc3-ECg" target="_blank">Video</a> of my Ignite San Francisco 2014 talk: <i>A quantitative philology of introspection.</i></p>
     </ul>
   </td>
