--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body,td,th {
 <table width="800" align="center"  border="0">
   <tr align="middle" valign="middle">
     <td width="220"><div>
-      <p><img src="diuk.jpg" width="165" align="left"></p>
+      <p><img src="cdiuk.jpg" width="165" align="left"></p>
     </div></td>
     <td width="*" align="left"><p><span class="name_header">Carlos Diuk-Wasser, Ph.D.</span></p>
       <p>Data Scientist<br>
