--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ body,td,th {
       <p><img src="cdiuk.jpg" width="264" align="left"></p>
     </div></td>
     <td width="*" align="left"><p><span class="name_header">Carlos Diuk-Wasser, Ph.D.</span></p>
-      <p>Data Scientist<br>
-        <a href="http://facebook.com/data" target="_blank">Core Data Science team</a><br>
+      <p>Research Scientist<br>
+        <a href="http://facebook.com/data" target="_blank">Computational Social Science - Core Data Science team</a><br>
         Facebook, Inc.<br>
         <br>
         <span class="email_style"><em>carlosdiuk gmail com</em></span></p></td>
