--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body,td,th {
   </tr>
   <tr>
   	<td colspan="2">
-		I work in the Core Data Science team at Facebook, doing quantitative research to understand people's online behavior in the context of a large-scale social network. <br>
+		I work in Computational Social Science within the Core Data Science team at Facebook, doing quantitative research to understand people's online behavior in the context of a large-scale social network. <br>
         <br>
 		Full <a href="CV_CarlosDiuk.pdf">CV</a> and <a href="http://scholar.google.com/citations?user=l0Txg3UAAAAJ" target="_blank">Google Scholar profile</a>.<br><br>
 	</td>
