Adding CSCW paper
Adding CSCW paper

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@ body,td,th {
   <td colspan="2">
 <p>Also check my <a href="http://scholar.google.com/citations?user=l0Txg3UAAAAJ" target="_blank">Google Scholar profile</a>.</p>
 <H4>Peer-reviewed Publications:</H4>
+
+<p>2021. &ldquo;Social Catalysts: Characterizing People Who Spark Conversations Among Others&rdquo;, Martin Saveski, Farshad Kooti, Sylvia Morelli Vitousek, Carlos Diuk, Bryce Bartlett, Lada A Adamic. <i>Proceedings of the ACM on Human-Computer Interaction. CSCW 2021.</I> <a href="papers/social_catalysts.pdf" target="_blank">pdf</a></p>
+
+
 <p>2014. &ldquo;Optimal Behavioral Hierarchy&rdquo;, Alec Solway, Carlos Diuk, Natalia C&oacute;rdova, Debbie Yee, Andrew G. Barto, Yael Niv, Matthew M. Botvinick. <i>PLOS Computational Biology</i>. <a href="http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003779" target="_blank">link</a></p>
 <p>2014. &ldquo;Parsing heuristic and forward search in first-graders game-play behavior&rdquo;, Luciano Paz, Andrea Goldin, Carlos Diuk and Mariano Sigman. <i>Cognitive Science</i>. <a href="papers/Paz2014CognSci.pdf" target="_blank">link</a></p>
 <p>2013. &ldquo;Divide and conquer: hierarchical reinforcement learning and task decomposition in humans.&rdquo;, Carlos Diuk, Anna Schapiro, Natalia C&oacute;rdova, Jos&eacute; Ribas-Fernandes, Yael Niv and Matthew M. Botvinick. In <em>Computational and Robotic Models of the Hierarchical Organization of Behavior</em>. Edited by Baldassare G and Mirolli M. Springer Verlag.<a href="https://www.springer.com/gp/book/9783642398742" target="_blank">link</a></p>
