--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ body,td,th {
     <td width="220"><div>
       <p><img src="cdiuk.jpg" width="264" align="left"></p>
     </div></td>
-    <td width="*" align="left"><p><span class="name_header">Carlos Diuk-Wasser, Ph.D.</span></p>
+    <td width="*" align="left"><p><span class="name_header">Carlos Greg Diuk-Wasser, Ph.D.</span></p>
       <p>Research Scientist<br>
         <a href="http://facebook.com/data" target="_blank">Computational Social Science - Core Data Science team</a><br>
-        Facebook, Inc.<br>
+        Meta, Inc.<br>
         <br>
         <span class="email_style"><em>carlosdiuk gmail com</em></span></p></td>
   </tr>
@@ -100,7 +100,7 @@ body,td,th {
   </tr>
   <tr>
   	<td colspan="2">
-		I work in Computational Social Science within the Core Data Science team at Facebook, doing quantitative research to understand people's online behavior in the context of a large-scale social network. <br>
+		I work in Computational Social Science within the Central Social Impact team at Meta, doing quantitative research to understand people's online behavior in the context of a large-scale social network. <br>
         <br>
 		Full <a href="CV_CarlosDiuk.pdf">CV</a> and <a href="http://scholar.google.com/citations?user=l0Txg3UAAAAJ" target="_blank">Google Scholar profile</a>.<br><br>
 	</td>
